[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/cockpit/cockpit_master.gd" type="Script" id=1]
[ext_resource path="res://textures/crosshair_simple_64.png" type="Texture" id=2]
[ext_resource path="res://themes/craft_holo_main.tres" type="Theme" id=3]
[ext_resource path="res://scenes/ui/cockpit_engine_display.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/cockpit_arms_display.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/cockpit_attire_display.tscn" type="PackedScene" id=6]

[sub_resource type="ViewportTexture" id=22]
viewport_path = NodePath("EngineDisplay/Viewport")

[sub_resource type="SpatialMaterial" id=23]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
params_cull_mode = 2
albedo_texture = SubResource( 22 )

[sub_resource type="PlaneMesh" id=14]
size = Vector2( 0.5, 0.25 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.329412, 0, 0.694118, 0.12549 )
border_color = Color( 1, 1, 1, 0.25098 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="ViewportTexture" id=24]
viewport_path = NodePath("ArmsDisplay/Viewport")

[sub_resource type="SpatialMaterial" id=25]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 2
albedo_texture = SubResource( 24 )

[sub_resource type="QuadMesh" id=18]
size = Vector2( 0.1, 0.2 )

[sub_resource type="ViewportTexture" id=26]
viewport_path = NodePath("AttireDisplay/Viewport")

[sub_resource type="SpatialMaterial" id=27]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 2
albedo_texture = SubResource( 26 )

[sub_resource type="GDScript" id=21]
script/source = "extends Camera

onready var Yaw = get_parent()
export var x_clamp := 5.0;
export var y_clamp := 10.0;

func _ready():
	## Tell Godot that we want to handle input
	set_process_input(true)

func look_updown_rotation(rotation = 0):
	\"\"\"
	Get the new rotation for looking up and down
	\"\"\"
	var toReturn := self.get_rotation() + Vector3(rotation, 0, 0)
	##
	## We don't want the player to be able to bend over backwards
	## neither to be able to look under their arse.
	## Here we'll clamp the vertical look to 90Â° up and down
	toReturn.x = clamp(toReturn.x, PI / -2, PI / 2)

	return toReturn

func look_leftright_rotation(rotation = 0):
	\"\"\"
	Get the new rotation for looking left and right
	\"\"\"
	return Yaw.get_rotation() + Vector3(
			0, 
			rotation,
			0);

func mouse(event):
	\"\"\"
	First person camera controls
	\"\"\"
	##
	## We'll use the parent node \"Yaw\" to set our left-right rotation
	## This prevents us from adding the x-rotation to the y-rotation
	## which would result in a kind of flight-simulator camera
	var yaw_rotation = look_leftright_rotation(event.relative.x / -200)
	yaw_rotation.y = clamp(yaw_rotation.y, -deg2rad(x_clamp), deg2rad(x_clamp))
	Yaw.set_rotation(yaw_rotation);

	##
	## Now we can simply set our y-rotation for the camera, and let godot
	## handle the transformation of both together
	var pitch_rotation = look_updown_rotation(event.relative.y / -200)
	pitch_rotation.x = clamp(pitch_rotation.x, -deg2rad(y_clamp), deg2rad(y_clamp))
	self.set_rotation(pitch_rotation)

func _input(event):
	##
	## We'll only process mouse motion events
	if event is InputEventMouseMotion:
		return mouse(event)"

[node name="Cockpit" type="Spatial"]
script = ExtResource( 1 )
_camera_path = NodePath("CameraPivot/Camera")

[node name="HUD" type="CenterContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Crosshair" type="TextureRect" parent="HUD"]
margin_left = 501.0
margin_top = 268.0
margin_right = 565.0
margin_bottom = 332.0
texture = ExtResource( 2 )

[node name="EngineDisplay" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 0.34202, -0.939693, 0, 0.939693, 0.34202, 0, -0.114642, -0.358274 )
material_override = SubResource( 23 )
cast_shadow = 0
mesh = SubResource( 14 )
material/0 = null

[node name="Viewport" type="Viewport" parent="EngineDisplay"]
size = Vector2( 1024, 512 )
transparent_bg = true
hdr = false
disable_3d = true
keep_3d_linear = true
usage = 0
render_target_v_flip = true

[node name="BackPanel" type="Panel" parent="EngineDisplay/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 15 )

[node name="EngineCkpitDisplay" parent="EngineDisplay/Viewport/BackPanel" instance=ExtResource( 4 )]

[node name="ArmsDisplay" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 0.967335, 0, 0.2535, 0, 1, 0, -0.2535, 0, 0.967336, -0.260079, -0.124277, -0.269886 )
material_override = SubResource( 25 )
cast_shadow = 0
mesh = SubResource( 18 )
material/0 = null

[node name="Viewport" type="Viewport" parent="ArmsDisplay"]
size = Vector2( 256, 512 )
transparent_bg = true
hdr = false
disable_3d = true
keep_3d_linear = true
usage = 0
render_target_v_flip = true

[node name="BackPanel" type="Panel" parent="ArmsDisplay/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 15 )

[node name="ArmsCkpitDisplay" parent="ArmsDisplay/Viewport/BackPanel" instance=ExtResource( 5 )]

[node name="AttireDisplay" type="MeshInstance" parent="."]
editor/display_folded = true
transform = Transform( 0.967334, 0, -0.253505, 0, 1, 0, 0.253505, 0, 0.967335, 0.26, -0.124, -0.27 )
material_override = SubResource( 27 )
cast_shadow = 0
mesh = SubResource( 18 )
material/0 = null

[node name="Viewport" type="Viewport" parent="AttireDisplay"]
size = Vector2( 256, 512 )
transparent_bg = true
hdr = false
disable_3d = true
keep_3d_linear = true
usage = 0
render_target_v_flip = true

[node name="BackPanel" type="Panel" parent="AttireDisplay/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_styles/panel = SubResource( 15 )

[node name="AttireCkpitDisplay" parent="AttireDisplay/Viewport/BackPanel" instance=ExtResource( 6 )]

[node name="CameraPivot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CameraPivot"]
cull_mask = 1048573
fov = 80.0
far = 8192.0
script = SubResource( 21 )

[node name="CSGSphere" type="CSGBox" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000767946, -0.00106956, -0.000511825 )
invert_faces = true
width = 1.0

[node name="CSGCombiner2" type="CSGCombiner" parent="CSGSphere"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.454641 )
operation = 1

[node name="CSGBox" type="CSGBox" parent="CSGSphere/CSGCombiner2"]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, -0.555334, 0 )
width = 1.0
height = 0.5
depth = 0.25

[node name="CSGBox2" type="CSGBox" parent="CSGSphere/CSGCombiner2"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, -0.343984, 0 )
width = 0.4
height = 0.5
depth = 0.25

[node name="CSGCombiner" type="CSGCombiner" parent="."]
editor/display_folded = true
visible = false

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
width = 1.5
height = 1.5
depth = 1.0

[node name="CSGSphere" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, -0.585199 )
operation = 2
width = 1.5
height = 1.0
depth = 1.5
